@startuml
title State Pattern - Equipment and Reservation States

skinparam classAttributeIconSize 0
skinparam shadowing false

interface EquipmentState <<State>> {
  + getStateName(): String
}

class AvailableState
class DisabledState
class MaintenanceState

EquipmentState <|.. AvailableState
EquipmentState <|.. DisabledState
EquipmentState <|.. MaintenanceState

class Equipment {
  - currentState: EquipmentState
  - status: String

::contentReference[oaicite:7]{index=7}
  + enable(): void
  + disable(): void
  + markMaintenance(): void
}

Equipment --> EquipmentState : currentState

interface ReservationState <<State>> {
  + modify(reservation: Reservation): void
  + cancel(reservation: Reservation): void
  + extend(reservation: Reservation): void
  + getStateName(): String
}

class PendingState
class ConfirmedState
class ExtendedState
class CancelledState

ReservationState <|.. PendingState
ReservationState <|.. ConfirmedState
ReservationState <|.. ExtendedState
ReservationState <|.. CancelledState

class Reservation {
  - currentState: ReservationState
  - status: String
  + confirmReservation(): void
  + modifyReservation(newStart, newEnd): void
  + cancelReservation(): boolean
  + extendReservation(newEndTime): boolean
}

Reservation --> ReservationState : currentState
@enduml
